--- a/project/package.json
+++ b/project/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tabler/core": "^1.0.0-beta20",
+    "@tabler/icons-webfont": "^2.38.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
